test/parser/pattern/empty_record_with_rest_error.exp
Error: Record must have at least one field
test/parser/pattern/empty_record_with_rest_error.myte:3:4-15
 3 | val Rec { ... }: Int = 1
   |     ^^^^^^^^^^^