test/parser/pattern/empty_record_with_rest_error.myte
module test

val Rec { ... }: Int = 1